- Improved interaction with the tank location cv2 window. Like most other cv2 windows it is now exitable by clicking the exit button or pressing escape. - Now detecting the screen's resolution to set the size of cv2 windows. - Added multithreading in "Batch" notebooks. Note that the "with" construct is required for the multiprocessing module to work in a jupyter notebook. - Added "Corrupt_Videos.ipynb" to help identify raw videos with fewer frames than their metadata claims. - Updated conda environment file "trilab-tracker.yml" to include the screen resolution detection module "screeninfo". - Added to-do list as "TO_DO.txt".

--- a/trilab-tracker.yml
+++ b/trilab-tracker.yml
@@ -10,8 +10,11 @@ dependencies:
   - jupyter
   - scipy
   - pyqtgraph
+#  - xlrd # read excel spreadsheets
+#  - openpyxl # write excel spreadsheets
   - pip:
     - opencv-python
     - sklearn
     - argparse
+    - screeninfo # get screen resolution
 
