- Changed the way tracking settings are handled in "Track_Batch.ipynb" to make it easier to change them at the last moment when performing tracking tests. The notebook is now appropriate both for tracking many videos or conducting small scale tests. I'm keeping "Track.ipynb" around for now because it contains the MOG2 background subtraction test. - Removed the need to provide a date and a population name when creating a trial/group/cvtracer object. May need to propagate the change to, e.g., "Track.ipynb". - Added "opencv-contrib-python" to the conda environment. Not using it yet but contains additional background subtractions that I'd like to try in the future.

--- a/trilab-tracker.yml
+++ b/trilab-tracker.yml
@@ -4,16 +4,17 @@ channels:
 dependencies:
   - python=3.7
   - pip
-  - pandas
-  - numpy
-  - matplotlib
   - jupyter
+  - numpy
   - scipy
+  - pandas
+  - matplotlib
   - pyqtgraph
-#  - xlrd # read excel spreadsheets
-#  - openpyxl # write excel spreadsheets
+  - xlrd # read excel spreadsheets
+  - openpyxl # write excel spreadsheets
   - pip:
     - opencv-python
+    - opencv-contrib-python # contains cv2.bgsegm with extra background subtraction methods
     - sklearn
     - argparse
     - screeninfo # get screen resolution
