- cvt/Tracker.py: Fixed the aspect ratio constraint. I was computing a ratio<1 instead of >1. I was also forgetting to take the square root of the eigenvalues of the matrix of second moments.
- cvt/Tracker.py: Changed the core tracking data structure from pandas.DataFrame to numpy.array. It makes it easier to slice along either the frame axis, fish axis, or quantity axis, all of which come up during tracking.
  In "Analysis.ipynb" the numpy array is loaded into a pandas dataframe identical to what we had before. The one difference is that I no longer save frame number; I may need to fix that in the future. The rest of the analysis should be unimpacted.

- video_corruption: Added "Detect_and_Repair.ipynb" which uses the ffmpeg-based module PythonVideoConverter to detect and repair corrupt videos of the kind the larval schooling project has been producing.

--- a/trilab-tracker.yml
+++ b/trilab-tracker.yml
@@ -18,4 +18,4 @@ dependencies:
     - sklearn
     - argparse
     - screeninfo # get screen resolution
-
+    - PythonVideoConverter # ffmpeg based video conversion
