- cvt/TrQA/Tracker.py: Added options "ideal_area" and "ideal_aspect" used to rank contours in the first frame. This was to address bits of the wall edge getting detected instead of the fish, which then takes a while to self-fix as it basically requires the actual fish to come near the spurious contour.
- cvt/TrQA/Tracker.py: The process of matching of objects in the current frame with objects in past frames now has three steps or priority levels. Matches between a current object and an object seen in the last two frames are assigned a distance based on their current and predicted coordinates (respectively). For matches involving an object that hasn't been in at least two frames, the last known position is used, but the distance is multiplied by 1e4 to make sure only objects that haven't already been matched in the previous round are considered. Finally object with no last known position are assigned a distance 1e8 to let the matching algorithm go through while not interefering with the other matches.

--- a/trilab-tracker.yml
+++ b/trilab-tracker.yml
@@ -13,8 +13,8 @@ dependencies:
   - xlrd # read excel spreadsheets
   - openpyxl # write excel spreadsheets
   - pip:
-#    - opencv-python
-    - opencv-contrib-python # Install instead of opencv-python. Contains extra features including extra background subtraction methods in submodule cv2.bgsegm. 
+    - opencv-python
+#    - opencv-contrib-python # Install instead of opencv-python. Contains extra features including extra background subtraction methods in submodule cv2.bgsegm. 
     - sklearn
     - argparse
     - screeninfo # get screen resolution
