- tracker/utils.py: Added functions to load tracker settings files.
- viewer.py: Added a tab called "Tune" to visualize the effect of tuning detection parameters.

--- a/trilab-tracker.yml
+++ b/trilab-tracker.yml
@@ -12,6 +12,7 @@ dependencies:
   - pyqtgraph
   - xlrd # read excel spreadsheets
   - openpyxl # write excel spreadsheets
+  - flatten-dict
   - pip:
     - opencv-python
 #    - opencv-contrib-python # Install instead of opencv-python. Contains extra features including extra background subtraction methods in submodule cv2.bgsegm. 
