- Updated conda yml file. Installing opencv via pip causes problems in Windows; now installing via conda-forge.

--- a/trilab-tracker.yml
+++ b/trilab-tracker.yml
@@ -13,8 +13,9 @@ dependencies:
   - xlrd # read excel spreadsheets
   - openpyxl # write excel spreadsheets
   - flatten-dict
+  - opencv
   - pip:
-    - opencv-python
+#    - opencv-python
 #    - opencv-contrib-python # Install instead of opencv-python. Contains extra features including extra background subtraction methods in submodule cv2.bgsegm. 
     - sklearn
     - argparse
