--- a/trilab-tracker.yml
+++ b/trilab-tracker.yml
@@ -2,22 +2,22 @@ name: trilab-tracker
 channels:
   - conda-forge
 dependencies:
-  - python
+  - python=3.10
   - pip
   - jupyter
-  - numpy
-  - scipy
-  - pandas
-  - matplotlib
-  - pyqtgraph
-  - xlrd # read excel spreadsheets
-  - openpyxl # write excel spreadsheets
-  - opencv
+  - numpy=1.22
+  - scipy=1.7
+  - pandas=1.4
+  - matplotlib=3.5
+  - pyqtgraph=0.12
+  - xlrd=2.0 # read excel spreadsheets
+  - openpyxl=3.0 # write excel spreadsheets
+  - opencv=4.5
   - pip:
 #    - opencv-python
 #    - opencv-contrib-python # Install instead of opencv-python. Contains extra features including extra background subtraction methods in submodule cv2.bgsegm. 
-    - sklearn
-    - argparse
-    - screeninfo # get screen resolution
-    - PythonVideoConverter # ffmpeg based video conversion
-    - flatten-dict
+    - sklearn==0.0.*
+    - argparse==1.4.*
+    - screeninfo==0.8.* # get screen resolution
+    - PythonVideoConverter==1.0.* # ffmpeg based video conversion
+    - flatten-dict==0.4.*
